<resources>
    <string name="app_name">SLP Token Wallet</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard</string>


    <string name="balances">Balances</string>
    <string name="button">Button</string>

    <string name="content_description_qr_code_receive_default">QR Code</string>
    <string name="content_bch_logo">BCH Logo</string>
    <string name="content_scan_icon">Scan Icon</string>
    <string name="content_slp_logo">SLP Logo</string>
    <string name="content_double_arrow_swap_icon">SLP Logo</string>

    <string name="copy_address">Copy Address</string>

    <string name="destination_slp_address">Destination SLP Address</string>

    <string name="dismss">Dismiss</string>

    <string name="message_no_tokens">You do not have any tokens yet. Go to the Receive tab so someone can give you tokens.</string>

    <string name="mnemonic_explanation">This mnemonic phrase is used to backup and restore your wallet. Keep it safe.</string>
    <string name="mnemonic_phrase">Mnemonic phrase</string>

    <string name="no_tokens">No tokens</string>

    <string name="ok">OK</string>

    <string name="qr_code">QR Code</string>
    <string name="send">Send</string>
    <string name="title_backup">Backup</string>
    <string name="title_balances">Balances</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_receive">Receive</string>
    <string name="title_receive_bch">Receive BCH</string>
    <string name="title_receive_slp">Receive Tokens</string>
    <string name="title_restore">Restore</string>
    <string name="title_scan">Scan</string>
    <string name="title_send">Send Tokens</string>
    <string name="title_settings">Settings</string>
    <string name="title_tab_send">Send</string>
    <string name="title_tab_wallet">Wallet</string>
    <string name="title_wallet">SLP Token Wallet</string>

    <string name="restore_error_failed">Failed to create new wallet.</string>
    <string name="restore_error_insufficient_words">Enter at least 12 words.</string>
    <string name="restore_error_phrase_blank">Enter a mnemonic phrase.</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="restore_wallet_confirmation_title">Overwrite Wallet?</string>
    <string name="restore_wallet_confirmation_message">Discard funds in the current wallet and set up a new wallet?</string>
    <string name="restore_wallet_confirmation_ok">New Wallet</string>
    <string name="restore_wallet_confirmation_cancel">Keep Current Wallet</string>
    <string name="restore_warning">Restoring a wallet will overwrite the current wallet. All funds in the current wallet will be lost unless it has already been backed up.</string>
    <string name="restore_instructions">Enter 12 words from a previous wallet backup.</string>

    <string name="scan">Scan</string>
    <string name="send_amount">Amount</string>
    <string name="send_error_address_invalid">Use an SLP address to send tokens to.</string>
    <string name="send_error_amount_invalid">Enter a number for the amount.</string>
    <string name="send_error_amount_not_positive">Enter a number greater than zero.</string>
    <string name="send_error_balance_insufficient">Insufficient balance.</string>
    <string name="send_error_balance_null">Unable to send because current balance is unavailable.</string>
    <string name="send_error_balance_not_found">Unable to send because current balance was not found.</string>
    <string name="send_error_no_amount">Enter an amount.</string>
    <string name="send_error_no_tokens">No tokens to send.</string>
    <string name="send_error_too_many_decimals">The amount has more decimal places than the token.</string>
    <string name="send_to">to</string>

    <string name="send_failed">Send Failed</string>
    <string name="sent">Sent</string>

    <string name="setting_backup">Backup Wallet</string>
    <string name="setting_restore"> Restore from Backup</string>

    <string name="show_in_explorer">Show in explorer</string>

    <string name="unknown_error">Unknown error.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
