<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".send.SendFragment">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
    >


        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/tokenSpinner" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"

                android:background="@drawable/input_background_narrow_margins"
        />
        <EditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/send_amount" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" android:textAlignment="center"

                android:background="@drawable/input_background"

                style="@style/MyBodyText"
                app:layout_constraintTop_toBottomOf="@+id/tokenSpinner"/>

        <TextView
                android:id="@+id/to"
                android:text="@string/send_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/amount" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                style="@style/MyBodyText"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/scanControls" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/to">

            <EditText
                    android:id="@+id/address"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:ems="10"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/scanButton"

                    android:background="@drawable/input_background"

                    android:inputType="text"
                    android:hint="@string/destination_slp_address"
                    android:importantForAutofill="no"
                    style="@style/MyBodyText"
            />

            <Button
                    android:id="@+id/scanButton"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:text="@string/scan"
                    android:drawableStart="@drawable/ic_scan"
                    android:drawablePadding="8dp"

                    android:background="@drawable/button_icon_on_background"
                    android:theme="@style/MyOnBackgroundButton"

                    android:contentDescription="@string/content_scan_icon"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/message"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/scanControls" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sendLayout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/message" app:layout_constraintVertical_bias="1.0">

            <Button
                    android:id="@+id/sendButton"
                    android:text="@string/send"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:theme="@style/MyGradientButton"
                    android:background="@drawable/button_gradient_ripple"
                    android:layout_width="0dp"
            />

            <ProgressBar
                    android:id="@+id/sendProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:elevation="@dimen/elevation_above_button_pressed"

                    android:indeterminate="true" android:indeterminateTint="@color/buttonText"
                    tools:visibility="visible"
                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:visibility="gone"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>